--- a/.github/workflows/autoversioning.yml
+++ b/.github/workflows/autoversioning.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: https://shafivulla.jfrog.io/Jfrog Build imaage:latest
+          tags: Build imaage:latest
       - name: Create Release
         if: ${{ !startsWith(github.ref, 'refs/tags/') }}
         uses: actions/create-release@v1
